chore: code optimization